--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,20 +49,27 @@ commands:
       - checkout
       - attach_workspace:
           at: /tmp
-      - run: |
-          if ! [ -s /tmp/app_image_tag ]
-          then
-            echo " app_image_tag not specified "; exit 1
-          fi
-      - run: |
-          export TF_IN_AUTOMATION=true
-          export GCLOUD_KEYFILE_JSON='/tmp/gcloud-service-key.json'
-          cd terraform/<< parameters.environment >> && echo 'Updating infra at ' `pwd`
-          terraform init -input=false
-          terraform validate
-          terraform plan -out=tfplan -input=false --var 'app_image_tag=`cat /tmp/app_image_tag`'
-          terraform show tfplan
-          terraform apply -input=false -auto-approve tfplan
+      - run:
+          name: Check whether app_image_tag was passed over from previous (image build) job
+          command: |
+            if ! [ -s /tmp/app_image_tag ]
+            then
+              echo " app_image_tag not specified "; exit 1
+            fi
+      - run:
+          name: Initialize Terraform
+          command: |
+            export TF_IN_AUTOMATION=true
+            export GCLOUD_KEYFILE_JSON='/tmp/gcloud-service-key.json'
+            cd terraform/<< parameters.environment >> && echo 'Updating infra at ' `pwd`
+            terraform init -input=false
+            terraform validate
+      - run:
+          name: Apply Terraform update
+          command: |
+            terraform plan -out=tfplan -input=false --var 'app_image_tag=`cat /tmp/app_image_tag`'
+            terraform show tfplan
+            terraform apply -input=false -auto-approve tfplan
 
 jobs:
   test:
