--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -62,7 +62,7 @@ commands:
           command: |
             export TF_IN_AUTOMATION=true
             export GCLOUD_KEYFILE_JSON='/tmp/gcloud-service-key.json'
-            cd terraform/<< parameters.environment >> && echo 'Updating infra at ' `pwd`
+            cd terraform/<< parameters.environment >> && echo 'Updating infra at ' `pwd` && cat /tmp/gcloud-service-key.json
             terraform init -input=false
             terraform validate
       - run:
