Export terraform variable as env var

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -61,14 +61,17 @@ commands:
           name: Initialize Terraform
           command: |
             export TF_IN_AUTOMATION=true
+            export TF_VAR_app_image_tag=`cat /tmp/app_image_tag`
             export GOOGLE_APPLICATION_CREDENTIALS='/tmp/gcloud-service-key.json'
             cd terraform/<< parameters.environment >> && echo 'Updating infra at ' `pwd` && cat /tmp/gcloud-service-key.json
             terraform init -input=false
-            terraform validate
+      - run:
+          name: Validate Terraform
+          command: terraform validate
       - run:
           name: Apply Terraform update
           command: |
-            terraform plan -out=tfplan -input=false --var 'app_image_tag=`cat /tmp/app_image_tag`'
+            terraform plan -out=tfplan -input=false
             terraform show tfplan
             terraform apply -input=false -auto-approve tfplan
 
