--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -69,11 +69,15 @@ commands:
       - run:
           name: Validate Terraform
           command: |
+            export TF_VAR_app_image_tag=`cat /tmp/app_image_tag`
             cd terraform/<< parameters.environment >>
             terraform validate
       - run:
           name: Apply Terraform update
           command: |
+            export TF_IN_AUTOMATION=true
+            export TF_VAR_app_image_tag=`cat /tmp/app_image_tag`
+            export GOOGLE_APPLICATION_CREDENTIALS='/tmp/gcloud-service-key.json'
             cd terraform/<< parameters.environment >>
             terraform plan -out=tfplan -input=false
             terraform show tfplan
