--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -100,6 +100,13 @@ jobs:
           paths:
             - app/node_modules
           key: v1-dependencies-{{ checksum "app/yarn.lock" }}
+      # - run:
+      #     name: Install kubeval and lint all Kubernetes declarations
+      #     command: |
+      #       wget https://github.com/garethr/kubeval/releases/download/0.7.3/kubeval-linux-amd64.tar.gz
+      #       tar xzvf kubeval-linux-amd64.tar.gz
+      #       chmod u+x kubeval
+      #       ./kubeval k8s/**/*
       - run:
           name: Run tests
           command: cd app && yarn test
@@ -154,7 +161,7 @@ workflows:
     jobs:
       - test
 
-      # Push to any non-master branche triggers deployment to `dev` environment:
+      # Push to any non-master branch triggers deployment to `dev` environment:
       - build-and-push-image-dev:
           requires:
             - test
