--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -67,11 +67,9 @@ commands:
           name: Apply kubectl
           command: kubectl apply -f k8s_filled.yml && kubectl rollout status deployment/gke-${ENV}
       - store_artifacts:
-          path:
-            - /tmp/app_image
+          path: /tmp/app_image
       - store_artifacts:
-          path:
-            - /tmp/tfplan
+          path: /tmp/tfplan
 
 jobs:
   test:
