--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ commands:
       - run:
           name: Install dependencies
           command: |
-            apk add --no-cache docker gettext terraform
+            apk add --no-cache docker gettext terraform=0.11.11
             gcloud components install kubectl
             wget https://github.com/garethr/kubeval/releases/download/0.7.3/kubeval-linux-amd64.tar.gz
             tar xzvf kubeval-linux-amd64.tar.gz
@@ -62,7 +62,7 @@ commands:
             ./kubeval k8s_filled.yml
       - run:
           name: Authenticate kubectl
-          command: gcloud container clusters get-credentials gke-cluster-${ENV} --zone europe-north1-a
+          command: gcloud container clusters get-credentials $(terraform output cluster_name) --zone $(terraform output cluster_zone)
       - run:
           name: Apply kubectl
           command: kubectl apply -f k8s_filled.yml && kubectl rollout status deployment/gke-${ENV}
