--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ commands:
       - run:
           name: Install dependencies
           command: |
-            apk add --no-cache docker gettext terraform=0.11.11
+            apk add --no-cache docker gettext terraform=0.11.11@edge
             gcloud components install kubectl
             wget https://github.com/garethr/kubeval/releases/download/0.7.3/kubeval-linux-amd64.tar.gz
             tar xzvf kubeval-linux-amd64.tar.gz
