--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,8 @@ commands:
       - run:
           name: Install dependencies
           command: |
-            apk add --no-cache docker gettext terraform@edge=0.11.11
+            apk add --no-cache docker gettext
+            apk add --no-cache --repository=http://dl-cdn.alpinelinux.org/alpine/edge/main terraform=0.11.11
             gcloud components install kubectl
             wget https://github.com/garethr/kubeval/releases/download/0.7.3/kubeval-linux-amd64.tar.gz
             tar xzvf kubeval-linux-amd64.tar.gz
