--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -71,10 +71,12 @@ commands:
           name: Authenticate kubectl
           command: |
             cd terraform/${ENV}
+            terraform refresh
             gcloud container clusters get-credentials $(terraform output cluster_name) --zone $(terraform output cluster_zone)
       - run:
           name: Apply kubectl
           command: kubectl apply -f k8s_filled.yml && kubectl rollout status deployment/gke-${ENV}
+
       - store_artifacts:
           path: /tmp/app_image
       - store_artifacts:
