--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -70,6 +70,7 @@ commands:
       - run:
           name: Authenticate kubectl
           command: |
+            export GOOGLE_APPLICATION_CREDENTIALS='/tmp/gcloud-service-key.json'
             cd terraform/${ENV}
             terraform refresh
             gcloud container clusters get-credentials $(terraform output cluster_name) --zone $(terraform output cluster_zone)
@@ -79,6 +80,8 @@ commands:
 
       - store_artifacts:
           path: /tmp/app_image
+      - store_artifacts:
+          path: k8s_filled.yml
       - store_artifacts:
           path: /tmp/tfplan
 
