--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ commands:
       - run:
           name: Install dependencies
           command: |
-            apk add --no-cache docker gettext
+            apk add --no-cache bind-tools docker gettext
             apk add --no-cache --repository=http://dl-cdn.alpinelinux.org/alpine/edge/community terraform
             gcloud components install kubectl
             wget https://github.com/garethr/kubeval/releases/download/0.7.3/kubeval-linux-amd64.tar.gz
