--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,6 +4,8 @@ commands:
   deploy:
     description: Build and push docker image, update infra and kubernetes application
     parameters:
+      db_password:
+        type: env_var_name
       gcloud_service_key:
         type: env_var_name
       google_project_id:
@@ -50,6 +52,7 @@ commands:
           name: Initialize, validate and apply Terraform
           command: |
             export TF_VAR_k8s_master_allowed_ip=$K8S_MASTER_ALLOWED_IP
+            export TF_VAR_db_password=${<< parameters.db_password >>}
             cd terraform/${ENV}
             terraform init -input=false
             terraform validate
@@ -125,6 +128,7 @@ jobs:
       TF_IN_AUTOMATION: "true"
     steps:
       - deploy:
+          db_password: DB_PASSWORD_DEV
           gcloud_service_key: GCLOUD_SERVICE_KEY_DEV
           google_project_id: GOOGLE_PROJECT_ID_DEV
 
@@ -137,6 +141,7 @@ jobs:
       TF_IN_AUTOMATION: "true"
     steps:
       - deploy:
+          db_password: DB_PASSWORD_TEST
           gcloud_service_key: GCLOUD_SERVICE_KEY_TEST
           google_project_id: GOOGLE_PROJECT_ID_TEST
 
@@ -149,6 +154,7 @@ jobs:
       TF_IN_AUTOMATION: "true"
     steps:
       - deploy:
+          db_password: DB_PASSWORD_PROD
           gcloud_service_key: GCLOUD_SERVICE_KEY_PROD
           google_project_id: GOOGLE_PROJECT_ID_PROD
 
