--- a/app/package.json
+++ b/app/package.json
@@ -10,6 +10,7 @@
     "test": "echo 'OK!'"
   },
   "dependencies": {
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "pg": "^7.8.0"
   }
 }
