--- a/k8s/k8s.yml
+++ b/k8s/k8s.yml
@@ -39,6 +39,16 @@ spec:
         env:
         - name: PORT
           value: "3000"
+        - name: PGHOST
+          value: ${PGHOST}
+        - name: PGUSER
+          value: ${PGUSER}
+        - name: PGDATABASE
+          value: ${PGDATABASE}
+        - name: PGPORT
+          value: ${PGPORT}
+        - name: PGPASSWORD
+          value: ${PGPASSWORD}
         ports:
         - containerPort: 3000
           protocol: TCP
