--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,6 +53,7 @@ commands:
           command: |
             export TF_VAR_k8s_master_allowed_ip=$K8S_MASTER_ALLOWED_IP
             export TF_VAR_db_password=${<< parameters.db_password >>}
+            export TF_VAR_project_id=${<< parameters.google_project_id >>}
             cd terraform/${ENV}
             terraform init -input=false
             terraform validate
