--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -73,7 +73,7 @@ commands:
             export PGDATABASE=$(terraform output db_name)
             export PGPASSWORD=$(terraform output db_password)
             export PGPORT=5432
-            cd ..
+            cd ${CIRCLE_WORKING_DIRECTORY}
             envsubst < k8s/k8s.yml > k8s_filled.yml
             ./kubeval k8s_filled.yml
       - run:
