--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -76,7 +76,7 @@ commands:
             export PGUSER=$(terraform output db_username)
             export PGDATABASE=$(terraform output db_name)
             export PGPASSWORD=$(terraform output db_password)
-            export PGPORT='5432'
+            export PGPORT=5432
             cd ../..
             envsubst < ./k8s/k8s.yml > /tmp/k8s_filled.yml
             ./kubeval /tmp/k8s_filled.yml
